--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,33 @@
-# macOS
-.DS_Store
-
-# Node
-node_modules/
-npm-debug.log*
-yarn-error.log*
-
-# Python
-__pycache__/
-*.py[cod]
-.venv/
-.env
-
-# Editors
-.vscode/
-.idea/
+# Dependencies
+node_modules
+dist
+dist-ssr
 
 # Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Environment
+*.local
+.env
+.env.local
+.env.*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Claude Code (optional - remove if you use Claude Code)
+.claude/
